--- a/NOTICE.html
+++ b/NOTICE.html
@@ -119,25 +119,17 @@ $(document).ready(function () {
 </div>
 
 
-<div id="license-and-copyright-notice" class="section level3">
-<h3>License and Copyright Notice</h3>
-<pre><code>Research Analysis for NOAA Weather
+<div id="default-license-and-copyright-notice" class="section level3">
+<h3>Default License and Copyright Notice</h3>
+<pre><code>Self published Research Analysis for NOAA Weather
 Copyright (C) 2017 Michael Garcia. All Rights Reserved.
+Unless otherwise noted, default copyright is excercised
+and exclusive rights of the author. 
+https://www.copyright.gov/title17/
 
-Licensing Inquiries and Requests: mgar_datascience at protonmail.com
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as published
-by the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</code></pre>
+This program is distributed  WITHOUT ANY WARRANTY; without even the 
+implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+PURPOSE.  </code></pre>
 </div>
 
 
